# ai-dpi-nids

./: CMakeLists.txt  README.md  WINDOWS_SETUP.md
include/: connection_tracker.h  dpi_engine.h  fast_path.h  inference_engine.h  rule_manager.h  types.h
model/: explain_model.py  nids_model.onnx  requirements.txt  train_export.py
src/: connection_tracker.cpp  dpi_engine.cpp  fast_path.cpp  inference_engine.cpp  load_balancer.cpp  main_dpi.cpp  rule_manager.cpp
